--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -5,6 +5,9 @@
     <!--region ThemeModifier variables-->
     <sys:Double x:Key="DetailsViewDescriptionWidth">300</sys:Double>
     <sys:Boolean x:Key="DetailsViewDescriptionDockToRight">false</sys:Boolean>
+    <VerticalAlignment x:Key="DetailsViewBackgroundVerticalAlignment">Center</VerticalAlignment>
+    <HorizontalAlignment x:Key="DetailsViewBackgroundHorizontalAlignment">Left</HorizontalAlignment>
+	<Visibility x:Key="DetailsViewLogoVisibility">Visible</Visibility>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
