--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -110,7 +110,7 @@
                                     </Border>
                                     <Border>
                                         <FadeImage x:Name="PART_ImageBackground" Stretch="UniformToFill"
-                                               HorizontalAlignment="Left" VerticalAlignment="Center">
+                                               HorizontalAlignment="{DynamicResource DetailsViewBackgroundHorizontalAlignment}" VerticalAlignment="{DynamicResource DetailsViewBackgroundVerticalAlignment}">
                                             <FadeImage.OpacityMask>
                                                 <LinearGradientBrush StartPoint="0.5, 0.0" EndPoint="0.5, 1.0" >
                                                     <GradientStop Color="Black" Offset="0.75"/>
@@ -123,7 +123,13 @@
 
                                 <StackPanel Grid.Row="0" Name="DetailsTop" VerticalAlignment="Top">
                                     <Grid Name="HeaderImagesGrid" Height="{Settings CalculatedGameDetailsIndentation}">
-                                        <ContentControl x:Name="ExtraMetadataLoader_LogoLoaderControl" Margin="20,20,30,20"/>
+                                        <ContentControl x:Name="ExtraMetadataLoader_LogoLoaderControl" Margin="20,20,30,20">
+											<ContentControl.Style>
+												<Style TargetType="{x:Type ContentControl}">
+													<Setter Property="Visibility" Value="{DynamicResource DetailsViewLogoVisibility}" />
+												</Style>
+											</ContentControl.Style>
+										</ContentControl>
 
                                         <DockPanel Margin="20,0,30,20" LastChildFill="False" VerticalAlignment="Bottom">
                                             <Image Name="PART_ImageIcon" MaxHeight="48" MaxWidth="48"
