--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -104,10 +104,10 @@
 
     <!--region Custom Controls background brushes-->
     <SolidColorBrush x:Key="ComboBoxListBackgroundBrush" Color="{DynamicResource ControlBackgroundColorDark}" />
-    <LinearGradientBrush x:Key="ExpanderExBackgroundBrush" StartPoint="-0.1, 0.5" EndPoint="1.0, 0.5" >
-        <GradientStop Color="#292f3b" Offset="0"/>
-        <GradientStop Color="#292f3b" Offset="0.5"/>
-        <GradientStop Color="#00292f3b" Offset="0.95"/>
+    <LinearGradientBrush x:Key="ExpanderExBackgroundBrush" StartPoint="0, 0.5" EndPoint="1.0, 0.5" >
+        <GradientStop Color="#292f3b" Offset="0.4"/>
+        <GradientStop Color="#262b34" Offset="0.75"/>
+        <GradientStop Color="#24282f" Offset="1.0"/>
     </LinearGradientBrush>
     <SolidColorBrush x:Key="ExpanderExIsMouseOverBackgroundBrush" Color="#3E4E69" />
 
@@ -292,11 +292,8 @@
         <GradientStop Color="#3a9eee" Offset="0.50"/>
         <GradientStop Color="#3287e3" Offset="1"/>
     </LinearGradientBrush>
-    
-    <LinearGradientBrush x:Key="LibraryDetailsViewBackgroundBrush" StartPoint="0.5, 0.0" EndPoint="0.5, 1.0" >
-        <GradientStop Color="#2d333c" Offset="0"/>
-        <GradientStop Color="#24282f" Offset="0.2"/>
-    </LinearGradientBrush>
+
+    <SolidColorBrush x:Key="LibraryDetailsViewBackgroundBrush" Color="#24282f" />
     <SolidColorBrush x:Key="FilterPanelViewBackgroundBrush" Color="#434953" />
 
     
