--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -412,15 +412,15 @@
                                                                 <Setter Property="FontSize" Value="{DynamicResource FontSize}"/>
                                                                 <Setter Property="Foreground" Value="{DynamicResource DetailsViewContainerLabelBrush}"/>
                                                                 <Setter Property="Padding" Value="0"/>
-                                                                <Setter Property="Margin" Value="0,0,20,0"/>
-                                                                <Setter Property="VerticalAlignment" Value="Center" />
+                                                                <Setter Property="Margin" Value="0,4,20,4"/>
+                                                                <Setter Property="VerticalAlignment" Value="Top" />
                                                             </Style>
                                                         </DockPanel.Resources>
                                                         <Border DockPanel.Dock="Left" Name="ContainerHeightBorder" Height="{Settings GameDetailsCoverHeight}"/>
                                                         <Image Name="PART_ImageCover" VerticalAlignment="Bottom"
-                                                        DockPanel.Dock="Left" Height="{Binding ElementName=ContainerHeightBorder, Path=ActualHeight}"
-                                                        StretchDirection="Both" Stretch="Uniform"
-                                                        RenderOptions.BitmapScalingMode="Fant" Margin="0,0,15,0">
+                                                               DockPanel.Dock="Left" Height="{Binding ElementName=ContainerHeightBorder, Path=ActualHeight}"
+                                                               StretchDirection="Both" Stretch="Uniform"
+                                                               RenderOptions.BitmapScalingMode="Fant" Margin="0,0,15,0">
                                                             <Image.Effect>
                                                                 <DropShadowEffect BlurRadius="15" ShadowDepth="0"/>
                                                             </Image.Effect>
@@ -464,11 +464,11 @@
                                                                         <Button Background="Transparent" Name="PART_ButtonLibrary" />
                                                                         <Label Name="PART_ElemSource" Content="{DynamicResource LOCSourceLabel}" />
                                                                         <Button Name="PART_ButtonSource" />
-                                                                        <Label Name="PART_ElemPlatform" Content="{DynamicResource LOCPlatformTitle}" VerticalAlignment="Top" Margin="0,4,0,0" />
+                                                                        <Label Name="PART_ElemPlatform" Content="{DynamicResource LOCPlatformTitle}" />
                                                                         <ItemsControl Name="PART_ItemsPlatforms" />
-                                                                        <Label Name="PART_ElemDevelopers" Content="{DynamicResource LOCDeveloperLabel}" VerticalAlignment="Top" Margin="0,4,0,0" />
+                                                                        <Label Name="PART_ElemDevelopers" Content="{DynamicResource LOCDeveloperLabel}" />
                                                                         <ItemsControl Name="PART_ItemsDevelopers"/>
-                                                                        <Label Name="PART_ElemPublishers" Content="{DynamicResource LOCPublisherLabel}" VerticalAlignment="Top" Margin="0,4,0,0" />
+                                                                        <Label Name="PART_ElemPublishers" Content="{DynamicResource LOCPublisherLabel}" />
                                                                         <ItemsControl Name="PART_ItemsPublishers"/>
                                                                         <Label Name="PART_ElemReleaseDate" Content="{DynamicResource LOCGameReleaseDateTitle}" />
                                                                         <Button Name="PART_ButtonReleaseDate" VerticalAlignment="Center" />
@@ -479,10 +479,10 @@
                                                                         <GridEx.Resources>
                                                                             <Style TargetType="Button" BasedOn="{StaticResource PropertyItemButton}" />
                                                                         </GridEx.Resources>
-                                                                        <Label Name="PART_ElemSeries" Content="{DynamicResource LOCSeriesLabel}" VerticalAlignment="Top" Margin="0,4,0,0" />
+                                                                        <Label Name="PART_ElemSeries" Content="{DynamicResource LOCSeriesLabel}" />
                                                                         <ItemsControl Name="PART_ItemsSeries" />
 
-                                                                        <Label Name="PART_ElemRegion" Content="{DynamicResource LOCRegionLabel}" VerticalAlignment="Top" Margin="0,4,0,0" />
+                                                                        <Label Name="PART_ElemRegion" Content="{DynamicResource LOCRegionLabel}" />
                                                                         <ItemsControl Name="PART_ItemsRegions" />
 
                                                                         <Label Name="PART_ElemVersion" Content="{DynamicResource LOCVersionLabel}" />
@@ -500,7 +500,7 @@
                                                                         <TextBlock Name="PART_TextCriticScore" VerticalAlignment="Center"
                                                                                    Style="{DynamicResource TextBlockGameScore}" />
 
-                                                                        <Label Name="PART_ElemAgeRating" Content="{DynamicResource LOCAgeRatingLabel}" VerticalAlignment="Top" Margin="0,4,0,0" />
+                                                                        <Label Name="PART_ElemAgeRating" Content="{DynamicResource LOCAgeRatingLabel}" />
                                                                         <ItemsControl Name="PART_ItemsAgeRatings" />
                                                                     </GridEx>
                                                                 </ScrollViewer>
