--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -5,6 +5,7 @@
     <!--region ThemeModifier variables-->
     <sys:Double x:Key="DetailsViewDescriptionWidth">300</sys:Double>
     <sys:Boolean x:Key="DetailsViewDescriptionDockToRight">false</sys:Boolean>
+    <sys:Boolean x:Key="DetailsViewShowInfoPanelDefault">true</sys:Boolean>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
