Details View: Add ThemeModifier varialbles to configure horizontal and Vertical alignement of the background image #5

--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -110,7 +110,8 @@
                                     </Border>
                                     <Border>
                                         <FadeImage x:Name="PART_ImageBackground" Stretch="UniformToFill"
-                                               HorizontalAlignment="Left" VerticalAlignment="Center">
+                                                   HorizontalAlignment="{DynamicResource DetailsViewBackgroundHorizontalAlignment}"
+                                                   VerticalAlignment="{DynamicResource DetailsViewBackgroundVerticalAlignment}">
                                             <FadeImage.OpacityMask>
                                                 <LinearGradientBrush StartPoint="0.5, 0.0" EndPoint="0.5, 1.0" >
                                                     <GradientStop Color="Black" Offset="0.75"/>
