--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -6,6 +6,8 @@
     <sys:Double x:Key="DetailsViewDescriptionWidth">300</sys:Double>
     <sys:Boolean x:Key="DetailsViewDescriptionDockToRight">false</sys:Boolean>
     <sys:Boolean x:Key="DetailsViewShowInfoPanelDefault">true</sys:Boolean>
+    <VerticalAlignment x:Key="DetailsViewBackgroundVerticalAlignment">Center</VerticalAlignment>
+    <HorizontalAlignment x:Key="DetailsViewBackgroundHorizontalAlignment">Left</HorizontalAlignment>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
