--- a/source/Constants.xaml
+++ b/source/Constants.xaml
@@ -8,6 +8,8 @@
     <sys:Boolean x:Key="DetailsViewShowInfoPanelDefault">true</sys:Boolean>
     <VerticalAlignment x:Key="DetailsViewBackgroundVerticalAlignment">Center</VerticalAlignment>
     <HorizontalAlignment x:Key="DetailsViewBackgroundHorizontalAlignment">Left</HorizontalAlignment>
+    <sys:Boolean x:Key="DetailsViewAllowUseOfLogos">true</sys:Boolean>
+    <sys:Boolean x:Key="GridViewAllowUseOfLogos">true</sys:Boolean>
     <!--region end-->
     
     <sys:Double x:Key="FontSizeSmall">12</sys:Double>
