--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -124,8 +124,11 @@
 
                                 <StackPanel Grid.Row="0" Name="DetailsTop" VerticalAlignment="Top">
                                     <Grid Name="HeaderImagesGrid" Height="{Settings CalculatedGameDetailsIndentation}">
-                                        <ContentControl x:Name="ExtraMetadataLoader_LogoLoaderControl" Margin="20,20,30,20"/>
-
+                                        <ContentControl x:Name="ExtraMetadataLoader_LogoLoaderControl"
+                                                        Margin="20,20,30,20"
+                                                        Tag="{DynamicResource DetailsViewAllowUseOfLogos}" 
+                                                        Style="{DynamicResource ControlPanelBoolTagToVisibility}"/>
+                                        
                                         <DockPanel Margin="20,0,30,20" LastChildFill="False" VerticalAlignment="Bottom">
                                             <Image Name="PART_ImageIcon" MaxHeight="48" MaxWidth="48"
                                                    DockPanel.Dock="Left" Margin="0,0,20,0"
@@ -815,7 +818,7 @@
                                                         </Border>
                                                     </Grid>
                                                 </StackPanel>
-                                                
+
                                             </StackPanel>
                                         </Grid>
                                     </Grid>
@@ -880,4 +883,15 @@
             </DataTrigger>
         </Style.Triggers>
     </Style>
+
+
+    <Style TargetType="ContentControl" x:Key="ControlPanelBoolTagToVisibility">
+        <Setter Property="Visibility" Value="Visible" />
+        <Style.Triggers>
+            <DataTrigger Binding="{Binding Tag, RelativeSource={RelativeSource Self}, FallbackValue=true}" Value="false" >
+                <Setter Property="Visibility" Value="Collapsed" />
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
+    
 </ResourceDictionary>
