--- a/source/Views/DetailsViewGameOverview.xaml
+++ b/source/Views/DetailsViewGameOverview.xaml
@@ -162,7 +162,7 @@
                                                             Width="24.5" Height="45" Margin="3.5,0,0,0">
                                                         <Button.Style>
                                                             <Style TargetType="Button">
-                                                                <Setter Property="Background" Value="{DynamicResource PlayButtonBackgroundBrush}" />
+                                                                <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
                                                                 <Setter Property="Cursor" Value="Hand"/>
                                                                 <Setter Property="Template">
                                                                     <Setter.Value>
@@ -176,42 +176,18 @@
                                                                                 </DockPanel>
                                                                             </Grid>
                                                                             <ControlTemplate.Triggers>
-                                                                                <DataTrigger Binding="{Binding Game.IsInstalled}" Value="False">
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
+                                                                                <DataTrigger Binding="{Binding ElementName=PART_ButtonPlayAction, Path=Visibility}" Value="Visible">
+                                                                                    <Setter Property="Background" Value="{DynamicResource PlayButtonBackgroundBrush}"/>
                                                                                 </DataTrigger>
-                                                                                <DataTrigger Binding="{Binding Game.IsLaunching}" Value="True">
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
-                                                                                </DataTrigger>
-                                                                                <DataTrigger Binding="{Binding Game.IsRunning}" Value="True">
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledBackgroundBrush}" />
+                                                                                <DataTrigger Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True">
+                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
                                                                                 </DataTrigger>
                                                                                 <MultiDataTrigger>
                                                                                     <MultiDataTrigger.Conditions>
-                                                                                        <Condition Binding="{Binding Game.IsInstalled}" Value="True"/>
                                                                                         <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
+                                                                                        <Condition Binding="{Binding ElementName=PART_ButtonPlayAction, Path=Visibility}" Value="Visible"/>
                                                                                     </MultiDataTrigger.Conditions>
                                                                                     <Setter Property="Background" Value="{DynamicResource MoreButtonInstalledIsMouseOverBackgroundBrush}"/>
-                                                                                </MultiDataTrigger>
-                                                                                <MultiDataTrigger>
-                                                                                    <MultiDataTrigger.Conditions>
-                                                                                        <Condition Binding="{Binding Game.IsInstalled}" Value="False"/>
-                                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
-                                                                                    </MultiDataTrigger.Conditions>
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
-                                                                                </MultiDataTrigger>
-                                                                                <MultiDataTrigger>
-                                                                                    <MultiDataTrigger.Conditions>
-                                                                                        <Condition Binding="{Binding Game.IsRunning}" Value="True"/>
-                                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
-                                                                                    </MultiDataTrigger.Conditions>
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
-                                                                                </MultiDataTrigger>
-                                                                                <MultiDataTrigger>
-                                                                                    <MultiDataTrigger.Conditions>
-                                                                                        <Condition Binding="{Binding Game.IsLaunching}" Value="True"/>
-                                                                                        <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Self}}" Value="True"/>
-                                                                                    </MultiDataTrigger.Conditions>
-                                                                                    <Setter Property="Background" Value="{DynamicResource MoreButtonNotInstalledIsMouseOverBackgroundBrush}"/>
                                                                                 </MultiDataTrigger>
                                                                             </ControlTemplate.Triggers>
                                                                         </ControlTemplate>
