--- a/source/Views/GridViewGameOverview.xaml
+++ b/source/Views/GridViewGameOverview.xaml
@@ -281,9 +281,66 @@
                                                        FontWeight="Bold" FontSize="{DynamicResource FontSizeLarge}" Style="{DynamicResource BaseTextBlockStyle}" />
                                             <Separator Background="{DynamicResource HighlightGlyphBrush}" Margin="0,5,0,5"/>
                                             <DockPanel>
-                                                <ContentControl DockPanel.Dock="Left" x:Name="HowLongToBeat_PluginButton" VerticalAlignment="Center"/>
+                                                <ContentControl DockPanel.Dock="Left" x:Name="HowLongToBeat_PluginButton" VerticalAlignment="Top"/>
                                                 <ContentControl x:Name="HowLongToBeat_PluginProgressBar" Margin="5,5,0,0" VerticalAlignment="Center"/>
                                             </DockPanel>
+                                            <GridEx Name="HltbDataGrid" ColumnCount="2" AutoLayoutColumns="2" RowCount="6" Tag="{DynamicResource GridViewShowHltbDataGrid}">
+                                                <GridEx.Style>
+                                                    <Style>
+                                                        <Setter Property="Control.Visibility" Value="Collapsed" />
+                                                        <Style.Triggers>
+                                                            <MultiDataTrigger>
+                                                                <MultiDataTrigger.Conditions>
+                                                                    <Condition Binding="{PluginSettings Plugin=HowLongToBeat, Path=HasData, FallbackValue=False}" Value="True" />
+                                                                    <Condition Binding="{Binding RelativeSource={RelativeSource Self}, Path=Tag, FallbackValue=False}" Value="True" />
+                                                                </MultiDataTrigger.Conditions>
+                                                                <Setter Property="Control.Visibility" Value="Visible" />
+                                                            </MultiDataTrigger>
+                                                        </Style.Triggers>
+                                                    </Style>
+                                                </GridEx.Style>
+                                                <Label Content="{DynamicResource LOCHowLongToBeatMainStory}"
+                                                       Style="{DynamicResource HltbGridLabelStyle}"
+                                                       Tag="{Binding ElementName=MainStoryFormat, Path=Text}" />
+                                                <TextBlock Name="MainStoryFormat"
+                                                           Style="{DynamicResource HltbGridTextStyle}"
+                                                           Text="{PluginSettings Plugin=HowLongToBeat, Path=MainStoryFormat, FallbackValue=--}"/>
+
+                                                <Label Content="{DynamicResource LOCHowLongToBeatMainExtra}"
+                                                       Style="{DynamicResource HltbGridLabelStyle}"
+                                                       Tag="{Binding ElementName=MainExtraFormat, Path=Text}" />
+                                                <TextBlock Name="MainExtraFormat"
+                                                           Style="{DynamicResource HltbGridTextStyle}"
+                                                           Text="{PluginSettings Plugin=HowLongToBeat, Path=MainExtraFormat, FallbackValue=--}"/>
+
+                                                <Label Content="{DynamicResource LOCHowLongToBeatCompletionist}"
+                                                       Style="{DynamicResource HltbGridLabelStyle}"
+                                                       Tag="{Binding ElementName=CompletionistFormat, Path=Text}" />
+                                                <TextBlock Name="CompletionistFormat"
+                                                           Style="{DynamicResource HltbGridTextStyle}"
+                                                           Text="{PluginSettings Plugin=HowLongToBeat, Path=CompletionistFormat, FallbackValue=--}"/>
+
+                                                <Label Content="{DynamicResource LOCHowLongToBeatSolo}"
+                                                       Style="{DynamicResource HltbGridLabelStyle}"
+                                                       Tag="{Binding ElementName=SoloFormat, Path=Text}" />
+                                                <TextBlock Name="SoloFormat"
+                                                           Style="{DynamicResource HltbGridTextStyle}"
+                                                           Text="{PluginSettings Plugin=HowLongToBeat, Path=SoloFormat, FallbackValue=--}"/>
+
+                                                <Label Content="{DynamicResource LOCHowLongToBeatCoOp}"
+                                                       Style="{DynamicResource HltbGridLabelStyle}"
+                                                       Tag="{Binding ElementName=CoOpFormat, Path=Text}" />
+                                                <TextBlock Name="CoOpFormat"
+                                                           Style="{DynamicResource HltbGridTextStyle}"
+                                                           Text="{PluginSettings Plugin=HowLongToBeat, Path=CoOpFormat, FallbackValue=--}"/>
+
+                                                <Label Content="{DynamicResource LOCHowLongToBeatVs}"
+                                                       Style="{DynamicResource HltbGridLabelStyle}"
+                                                       Tag="{Binding ElementName=VsFormat, Path=Text}" />
+                                                <TextBlock Name="VsFormat"
+                                                           Style="{DynamicResource HltbGridTextStyle}"
+                                                           Text="{PluginSettings Plugin=HowLongToBeat, Path=VsFormat, FallbackValue=--}"/>
+                                            </GridEx>
                                         </StackPanel>
                                         <!--#endregion -->
 
